# GVTD-X

./: .gitignore  .readme.old  Makefile  Makefile.in  Mkinclude  README.md  configure  configure.ac  configure.scan  ford-setting.md  install.md  main_mod.f90  main_mod.f90.org  main_mod_bound.f90  main_mod_bound_scaled.f90  main_mod_bound_scaled_QR.f90  main_mod_bound_scaled_addd.f90  main_mod_bound_scaled_addd.f90.org  main_mod_bound_scaled_addd_Dc.f90  main_mod_bound_scaled_addd_Dc_Phi2.f90  main_mod_bound_scaled_addd_Dc_Phi2_mod.f90  main_mod_bound_scaled_addd_Dc_Phi2_mod_20210720_wn2inner.f90  main_mod_bound_scaled_addd_QR.f90  main_mod_latest.f90  sub_mod.f90  test_Rankine.f90  test_Rankine2.f90  test_Rankine_Vm.nml  test_Rankine_rettest.nml
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
demo/: Makefile  Makefile.dcl  Makefile.dcl.org  Makefile.nodcl  calc_vtg2p.f90  sample.md  test_Rankine.f90  test_draw.f90  (+29 more)
src/: Makefile  Makefile.am  Makefile.in  Makefile.org  depend  gbvtd_main_mod.f90  gvtd_main_mod.f90  gvtdx_main_mod.f90  main_mod.f90  main_mod.f90.org  main_mod2.f90  main_mod_bound.f90  main_mod_bound_scaled.f90  main_mod_bound_scaled_QR.f90  main_mod_bound_scaled_addd.f90  main_mod_bound_scaled_addd_Dc_Phi2_mod_20210720_wn2inner.f90  main_mod_latest.f90  main_mod_with_innerwn1.f90  sub_mod.f90  tools_sub.f90
src/archive/: gvtdx_main_mod2.f90  main_mod.f90.org  main_mod_bound_scaled_addd.f90.org  main_mod_bound_scaled_addd_Dc.f90  main_mod_bound_scaled_addd_Dc_Phi2.f90  main_mod_bound_scaled_addd_Dc_Phi2_mod.f90  main_mod_bound_scaled_addd_QR.f90
(+129 files in other folders)
