#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
#AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
AC_INIT([GVTDX], [1.0.0], [satoki@gfd-dennou.org])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_RANLIB
AC_PROG_FC
AC_FC_LIBRARY_LDFLAGS


# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_CANONICAL_TARGET

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
