lib_LIBRARIES 		= libGVTDX.a
libGVTDX_a_SOURCES	=  \
			  sub_mod.f90 \
			  gvtdx_main_mod.f90 \
			  gbvtd_main_mod.f90 \
			  gvtd_main_mod.f90 \
			  tools_sub.f90
nobase_include_HEADERS	=  \
			  gvtdx_sub.mod \
			  gvtdx_main.mod \
			  gbvtd_main.mod \
			  gvtd_main.mod \
			  tools_sub.mod
CLEANFILES		=  \
			  gvtdx_sub.mod \
			  gvtdx_main.mod \
			  gbvtd_main.mod \
			  gvtd_main.mod \
			  tools_sub.mod
